Styling and image

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <style>
             * {
-                font-family: sans-serif;
+                font-family: "PT Sans", sans-serif;
                 margin: 0;
                 padding: 0;
+            }
+            body {
+                background-color: rgb(157, 196, 145);
             }
             .center {
                 text-align: center;
@@ -14,8 +17,9 @@
     </head>
     <body>
         <div class="center">
-            <p style="font-size: 2rem; font-weight: bold; margin-top: 2rem; margin-bottom: .5rem">PTK Action Group</p>
+            <p style="font-size: 3rem; font-weight: bold; margin-top: 4rem; margin-bottom: .5rem">PTK Action Group</p>
             <p style="font-size: 1.5rem">Please email us on <a href="mailto:admin@ptkactiongroup.uk">admin@ptkactiongroup.uk</a> for further info</p>
+            <img style="border-radius: 1rem; margin-top: 5rem" src="./content/hands.png">
         </div>
     </body>
 </html>
